--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <textarea
               id="chat-input"
               spellcheck="false"
-              placeholder="Chat with me bro."
+              placeholder="Have a chat with me."
               required
             ></textarea>
             <span id="send-btn"><i class="fa-solid fa-paper-plane"></i></span>
