--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="chatbot-container">
-      <div class="chatbot-name"><h1>Aigis AI</h1></div>
+      <div class="chatbot-name"><h1>AIGIS AI</h1></div>
       <div class="chat-container"></div>
       <div class="typing-container">
         <div class="typing-textarea">
@@ -27,7 +27,7 @@
             <textarea
               id="chat-input"
               spellcheck="false"
-              placeholder="Have a chat with me."
+              placeholder="I'll keep on living no matter what, so that I can answer all your questions..."
               required
             ></textarea>
             <span id="send-btn"><i class="fa-solid fa-paper-plane"></i></span>
@@ -35,7 +35,6 @@
         </div>
       </div>
     </div>
-
     <script type="module" src="mainModule.js"></script>
     <script type="module" src="script.js"></script>
   </body>
