added predefined prompts

--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
   <body>
     <div class="chatbot-container">
       <div class="chatbot-name"><h1>AIGIS AI</h1></div>
-      <div class="chat-container"></div>
+      <div class="chat-container">
+        <div class="prompts-container">
+          <!-- <div class="chat-prompt" id = "prompt-1"><p>Create a dog.</p></div>
+          <div class="chat-prompt" id = "prompt-2"><p>Create a dog.</p></div>
+          <div class="chat-prompt" id = "prompt-3"><p>Create a dog.</p></div>
+          <div class="chat-prompt" id = "prompt-4"><p>Create a dog.</p></div> -->
+          <p class="chat-prompt" id = "prompt-1"></p>
+          <p class="chat-prompt" id = "prompt-2"></p>
+          <p class="chat-prompt" id = "prompt-3"></p>
+          <p class="chat-prompt" id = "prompt-4"></p>
+        </div>
+      </div>
       <div class="typing-container">
         <div class="typing-textarea">
           <div class="typing-content">
