added home button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     </script>
   </head>
   <body>
+    <a href="https://johncarlosabenorio.github.io/Project-Collection/"
+      ><button
+        style="
+          position: absolute;
+          padding: 0.5rem;
+          border: 2px solid black;
+          color: black;
+          text-shadow: -1px -1px 0 white, /* Top-left shadow */ 1px -1px 0 white,
+            /* Top-right shadow */ -1px 1px 0 white,
+            /* Bottom-left shadow */ 1px 1px 0 white; /* Bottom-right shadow */;
+          background: rgb(255, 203, 91);
+          padding-inline: 2rem;
+          top: 1%;
+          left: 1%;
+          cursor: pointer;
+        "
+      >
+        Home
+      </button></a
+    >
     <div class="chatbot-container">
       <div class="chatbot-name"><h1>AIGIS AI</h1></div>
       <div class="chat-container">
@@ -26,10 +46,10 @@
           <div class="chat-prompt" id = "prompt-2"><p>Create a dog.</p></div>
           <div class="chat-prompt" id = "prompt-3"><p>Create a dog.</p></div>
           <div class="chat-prompt" id = "prompt-4"><p>Create a dog.</p></div> -->
-          <p class="chat-prompt" id = "prompt-1"></p>
-          <p class="chat-prompt" id = "prompt-2"></p>
-          <p class="chat-prompt" id = "prompt-3"></p>
-          <p class="chat-prompt" id = "prompt-4"></p>
+          <p class="chat-prompt" id="prompt-1"></p>
+          <p class="chat-prompt" id="prompt-2"></p>
+          <p class="chat-prompt" id="prompt-3"></p>
+          <p class="chat-prompt" id="prompt-4"></p>
         </div>
       </div>
       <div class="typing-container">
