--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
           position: absolute;
           padding: 0.5rem;
           border: 2px solid black;
+          font-weight: bold;
           color: black;
           text-shadow: -1px -1px 0 white, /* Top-left shadow */ 1px -1px 0 white,
             /* Top-right shadow */ -1px 1px 0 white,
-            /* Bottom-left shadow */ 1px 1px 0 white; /* Bottom-right shadow */;
+            /* Bottom-left shadow */ 1px 1px 0 white; /* Bottom-right shadow */
           background: rgb(255, 203, 91);
           padding-inline: 2rem;
           top: 1%;
